# manyhighs

./: CMakeLists.txt
build_off/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  HConfig.h  cmake_install.cmake  highs-config.cmake  highs-targets.cmake
build_off/app/: cmake_install.cmake
build_off/examples/: cmake_install.cmake
build_off/highs/: cmake_install.cmake
build_off/lib/: libhighs.so.1
build_on/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  cmake_install.cmake  highs-targets.cmake
build_on/app/: cmake_install.cmake
build_on/highs/: cmake_install.cmake
cmake/: sources.cmake
docs/: make.jl
docs/src/: quantum.md
highs/: CMakeLists.txt
highs/interfaces/rust/: Cargo.toml  README.md  cmake-integration.md
highs/interfaces/rust/.cargo/: config.toml
highs/interfaces/rust/highs/: Cargo.toml  build.rs
highs/interfaces/rust/highs-sys/: Cargo.toml  build.rs  wrapper.h
highs/interfaces/rust/highs-sys/src/: bindings_pregenerated.rs  lib.rs
highs/interfaces/rust/highs/examples/: callback.rs  lp.rs  mip.rs  par_scaling.rs
highs/interfaces/rust/highs/src/: builder.rs  callback.rs  enums.rs  error.rs  expression.rs  io.rs  lib.rs  model.rs  oneshot.rs  parallel.rs  problem.rs  solution.rs
highs/interfaces/rust/highs/tests/: callback.rs  dsl.rs  io.rs  lp.rs  mip.rs  parallel.rs  qp.rs
highs/lp_data/: HighsOptions.h
highs/mip/: HighsMipSolver.cpp  HighsMipSolverData.cpp  HighsMipSolverData.h
highs/quantum/: HighsQuantumHeuristic.cpp  HighsQuantumHeuristic.h  HighsQuantumOptions.h  HighsQubo.cpp  HighsQubo.h
highs/quantum/docs/: architecture.md  backends.md  check_links.py  cli.md  extending.md  hooked-into-highs.md  index.md  installation.md  theory.md  troubleshooting.md
highs/quantum/docs/assets/: build_assets.sh
highs/quantum/docs/assets/animations/: _common.py  penalty_escalation.py  qaoa_landscape.py  rins_fixing.py  sa_bit_flipping.py
highs/quantum/docs/assets/diagrams/: architecture.dot  build-flags.dot  dispatch-lifecycle.dot  extraction-paths.dot  solve-pipeline.dot
highs/quantum/docs/assets/screencasts/: benchmark.sh  benchmark.txt  highs_with_quantum.sh  highs_with_quantum.txt  sample_qubo.json  solve_qubo.sh  solve_qubo.txt
highs/quantum/python/: README.md  pyproject.toml
highs/quantum/python/highspy_quantum/: __init__.py  __main__.py  cli.py  model.py  protocol.py  repair.py  structure.py
highs/quantum/python/highspy_quantum/backends/: __init__.py  base.py  braket.py  classical.py  dwave.py  exact.py  qiskit.py  rigetti.py
highs/quantum/python/highspy_quantum/reformulation/: __init__.py  max_cut.py  set_partitioning.py  tsp.py
highs/quantum/python/tests/: test_classical.py  test_cli_subprocess.py  test_dwave.py  test_exact.py  test_protocol.py  test_qiskit.py  test_reformulation.py  test_repair.py  test_rigetti_braket.py  test_structure.py
